// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as danger 1`] = `
.css-0,
[data-css-0] {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  user-select: none;
  transition: all 150ms ease-in-out;
  color: #ffffff;
  background-color: #f03e3e;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #c92a2a;
}

.css-0:focus,
[data-css-0]:focus {
  box-shadow: 0 0 0 2px #ffffff, 0 0 2px 4px rgba(0, 31, 62, 0.19);
}

<button
  class="css-0"
>
  Primary Button
</button>
`;

exports[`renders as icon 1`] = `
.css-0,
[data-css-0] {
  display: inline-block;
  padding: 4px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  user-select: none;
  transition: all 150ms ease-in-out;
  color: rgba(0, 17, 34, 0.47);
  background-color: transparent;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.css-0:hover,
[data-css-0]:hover,
.css-0:focus,
[data-css-0]:focus {
  background-color: rgba(0, 36, 73, 0.05);
}

.css-3,
[data-css-3] {
  vertical-align: middle;
}

<button
  class="css-0"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="24"
    height="24"
    viewBox="0 0 24 24"
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    stroke-linecap="round"
    stroke-linejoin="round"
    class="css-3"
  >
    <circle
      cx="12"
      cy="12"
      r="1"
    />
    <circle
      cx="19"
      cy="12"
      r="1"
    />
    <circle
      cx="5"
      cy="12"
      r="1"
    />
  </svg>
</button>
`;

exports[`renders as primary 1`] = `
.css-0,
[data-css-0] {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  user-select: none;
  transition: all 150ms ease-in-out;
  color: #ffffff;
  background-color: #4263eb;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #364fc7;
}

.css-0:focus,
[data-css-0]:focus {
  box-shadow: 0 0 0 2px #ffffff, 0 0 2px 4px rgba(0, 31, 62, 0.19);
}

<button
  class="css-0"
>
  Primary Button
</button>
`;

exports[`renders as secondary 1`] = `
.css-0,
[data-css-0] {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  user-select: none;
  transition: all 150ms ease-in-out;
  color: rgba(0, 5, 9, 0.87);
  background-color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: rgba(0, 36, 73, 0.05);
}

.css-0:focus,
[data-css-0]:focus {
  box-shadow: 0 0 0 2px #ffffff, 0 0 2px 4px rgba(0, 31, 62, 0.19);
}

<button
  class="css-0"
>
  Primary Button
</button>
`;

exports[`renders when disabled 1`] = `
.css-0,
[data-css-0] {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  user-select: none;
  transition: all 150ms ease-in-out;
  color: #ffffff;
  background-color: #4263eb;
  opacity: 0.5;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #364fc7;
}

.css-0:focus,
[data-css-0]:focus {
  box-shadow: 0 0 0 2px #ffffff, 0 0 2px 4px rgba(0, 31, 62, 0.19);
}

<button
  disabled=""
  class="css-0"
>
  Disabled Button
</button>
`;

exports[`renders without crashing 1`] = `
.css-0,
[data-css-0] {
  display: inline-block;
  padding: 8px 12px;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.25;
  text-decoration: none;
  border: 0;
  border-radius: 3px;
  outline: 0;
  white-space: nowrap;
  cursor: pointer;
  user-select: none;
  transition: all 150ms ease-in-out;
  color: #ffffff;
  background-color: #4263eb;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-transition: all 150ms ease-in-out;
  -moz-transition: all 150ms ease-in-out;
}

.css-0:hover,
[data-css-0]:hover {
  background-color: #364fc7;
}

.css-0:focus,
[data-css-0]:focus {
  box-shadow: 0 0 0 2px #ffffff, 0 0 2px 4px rgba(0, 31, 62, 0.19);
}

<button
  class="css-0"
>
  Test Button
</button>
`;
